# PICO-GB-CART-OLD

./: .gitignore  Build linux  CMakeLists.txt  LICENSE  MakeSLN.bat  README.md  boot.c  bootloader.c  firmware.c  hw_config.c  memmap_default.ld  uf2tool.py
GBCode/: makeall.bat
GBCode/Bootloader/: @usage.bat  bootloader.gb  make.bat
GBCode/Bootloader/C/: main.c
GBCode/Bootloader/GB/: bootloadercode.c
GBCode/ResetAfterRomChange/: make.bat
GBCode/ResetAfterRomChange/C/: romreset.c
GBCode/ResetAfterRomChange/GB/: romreset.c  romreset.h
Python/: bin2c.py  noi2sym.py  obj2ofs.py  romusage.py
Roms/: GB2C.bat  README.md
